# nort

./: .gitignore  pyproject.toml  requirements.txt
nort/: __init__.py  load_data.py  model.py  processing.py  validation.py
