[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nort"
version = "0.1.0"
description = "Automated Novel Object Recognition (NOR) analysis pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "opencv-python>=4.7",
  "scikit-learn>=1.3",
]

[tool.setuptools]
packages = {find = {}}


